--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h1>Download the game</h1>
           <h2>Here you can download our game</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="./download/file.png" download="presenting-in-vr" class="btn-get-started scrollto">Download</a>
+            <a href="https://drive.google.com/file/d/1uYvnUIazZr6Qk0ftOzwd-DUmunmAbNKL/view?usp=sharing" download="presenting-in-vr" class="btn-get-started scrollto">Download</a>
             <a href="" class="glightbox btn-watch-video"><i
                 class="bi bi-play-circle"></i><span>Watch a preview</span></a>
           </div>
