change file --> Rick

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h1>Download the game</h1>
           <h2>Here you can download our game</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="https://drive.google.com/file/d/1uYvnUIazZr6Qk0ftOzwd-DUmunmAbNKL/view?usp=sharing" download="BartoSutton - RL.pdf" class="btn-get-started scrollto">Download File</a>
+            <a href="https://drive.google.com/u/0/uc?id=1FQBpQFSFhfnioWLneWqb0fKD2SZOc0UW&export=download" download="you_got_ricked.avi" class="btn-get-started scrollto">Download File</a>
             <a href="" class="glightbox btn-watch-video"><i
                 class="bi bi-play-circle"></i><span>Watch a preview</span></a>
           </div>
