Fix download button CSS
I have tried fixing it

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>...</title>
+  <title>Presenting in VR | VIRTUAL REALITY GAME</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <link href="assets/img/favicon.png" rel="icon">
@@ -48,10 +48,12 @@
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
           <h1>Download the game</h1>
           <h2>Here you can download our game</h2>
+          <div class="measure">
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="./download/file.png" download="presenting-in-vr" class="btn-get-started scrollto">Download</a>
             <a href="" class="glightbox btn-watch-video"><i
                 class="bi bi-play-circle"></i><span>Watch a preview</span></a>
+              </div>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
