--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <div class="col-lg-4 aos-init aos-animate">
           <div class="box">
             <h3>Upload your presentation to the game</h3>
+            <p>You can easily upload your powerpoint presentation to the game, and present like your infront of a presenting board.</p>
             <ul>
               <img src="assets/img/presentation.png" class="img-fluid img-logo-color" alt="">
             </ul>
@@ -85,6 +86,7 @@
         <div class="col-lg-4 mt-4 mt-lg-0 aos-init aos-animate">
           <div class="box">
             <h3>Present like its a real crowd</h3>
+            <p>Just present like you are presenting something in real life. We have thought about everything. You are performing infront of an actual crowd that reacts to your presenting behaviour to make it even more realistic.</p>
             <ul>
               <img src="assets/img/crowd.png" class="img-fluid img-logo-color" alt="">
             </ul>
