--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h2>Here you can download our game</h2>
           <div class="measure">
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="./download/file.png" download="presenting-in-vr" class="btn-get-started scrollto">Download</a>
+            <a href="https://drive.google.com/u/0/uc?id=1FQBpQFSFhfnioWLneWqb0fKD2SZOc0UW&export=download" download="presenting-in-vr" class="btn-get-started scrollto">Download</a>
             <a href="" class="glightbox btn-watch-video"><i
                 class="bi bi-play-circle"></i><span>Watch a preview</span></a>
               </div>
@@ -103,7 +103,7 @@
 
       <div id="Instructions" class="section-title">
         <h2>How to install the game?</h2>
-        <p>1. Download the file <a href="./download/file.png" download="presenting-in-vr">(If you haven't downloaded it, click here)</a></p>
+        <p>1. Download the file <a href="https://drive.google.com/u/0/uc?id=1FQBpQFSFhfnioWLneWqb0fKD2SZOc0UW&export=download" download="presenting-in-vr">(If you haven't downloaded it, click here)</a></p>
         <p>2. Open the readme document and follow the instructions</p>
       </div>
 
