--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
           <div class="measure">
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="https://drive.google.com/u/0/uc?id=1FQBpQFSFhfnioWLneWqb0fKD2SZOc0UW&export=download" download="presenting-in-vr" class="btn-get-started scrollto">Download</a>
-            <a href="" class="glightbox btn-watch-video"><i
-                class="bi bi-play-circle"></i><span>Watch a preview</span></a>
               </div>
           </div>
         </div>
@@ -72,7 +70,7 @@
         <div class="col-lg-4 aos-init aos-animate">
           <div class="box">
             <h3>Upload your presentation to the game</h3>
-            <p>You can easily upload your powerpoint presentation to the game, and present like your infront of a presenting board.</p>
+            <p>You can easily upload your PDF project to the in-game screen.</p>
             <ul>
               <img src="assets/img/presentation.png" class="img-fluid img-logo-color" alt="">
             </ul>
@@ -86,7 +84,7 @@
         <div class="col-lg-4 mt-4 mt-lg-0 aos-init aos-animate">
           <div class="box">
             <h3>Present like its a real crowd</h3>
-            <p>Just present like you are presenting something in real life. We have thought about everything. You are performing infront of an actual crowd that reacts to your presenting behaviour to make it even more realistic.</p>
+            <p>The crowd is realistic and respond to your bahiviour.</p>
             <ul>
               <img src="assets/img/crowd.png" class="img-fluid img-logo-color" alt="">
             </ul>
