--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
-          <h1>Download the game</h1>
-          <h2>Here you can download our game</h2>
+          <h1>Presenting in VR</h1>
+          <h2>Practice your presenting skills</h2>
           <div class="measure">
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="https://drive.google.com/u/0/uc?id=1FQBpQFSFhfnioWLneWqb0fKD2SZOc0UW&export=download" download="presenting-in-vr" class="btn-get-started scrollto">Download</a>
@@ -69,8 +69,8 @@
 
         <div class="col-lg-4 aos-init aos-animate">
           <div class="box">
-            <h3>Upload your presentation to the game</h3>
-            <p>You can easily upload your PDF project to the in-game screen.</p>
+            <h3>Rehearse with your own presentations</h3>
+            <p>You can easily upload your PDF slides to the screen in the game environment.</p>
             <ul>
               <img src="assets/img/presentation.png" class="img-fluid img-logo-color" alt="">
             </ul>
@@ -83,8 +83,8 @@
 
         <div class="col-lg-4 mt-4 mt-lg-0 aos-init aos-animate">
           <div class="box">
-            <h3>Present like its a real crowd</h3>
-            <p>The crowd is realistic and respond to your bahiviour.</p>
+            <h3>Practice presenting with a realistic crowd</h3>
+            <p>The crowd is responds to your behaviour!</p>
             <ul>
               <img src="assets/img/crowd.png" class="img-fluid img-logo-color" alt="">
             </ul>
