changed file location

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h2>Practice your presenting skills</h2>
           <div class="measure">
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="https://drive.google.com/u/0/uc?id=1OubC8Epcv5dXoUMKo2LmXNpwI_QTJneU&export=download" download="presenting-in-vr" class="btn-get-started scrollto">Download</a>
+            <a href="https://drive.google.com/uc?export=download&confirm=yTib&id=1OubC8Epcv5dXoUMKo2LmXNpwI_QTJneU" download="presenting-in-vr" class="btn-get-started scrollto">Download</a>
               </div>
           </div>
         </div>
